--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,93 @@
+html {
+  font-size: 18px;
+  font-family: helvetica;
+}
+
+.sitecontainer {
+  width: 960px;
+  height:auto;
+  padding-left: 9rem;
+}
+
 .container .header {
   background-color: black;
   color: white;
+}
+
+.header {
+  display: flex;
+
+  padding-top: 0.66rem;
+  padding-bottom: 0.66rem;
+  padding-left: 9rem;
+}
+
+.header img {
+  height: 1.5rem;
+  padding-right: 1rem;
+  padding-left: 0.5rem;
+}
+
+.container .banner {
+  display: flex;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/moto.jpeg);
+  height: 25rem;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.newarrival {
+  height: 10rem;
+  width: 20rem;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  padding-left: 3rem;
+  padding-top: 2rem;
+}
+
+.newarrival h3 {
+  font-size: 1rem;
+
+}
+
+.newarrival h1 {
+  font-size: 2rem;
+}
+
+.banner .newarrival{
+margin-top: 9rem;
+margin-left: 9rem;
+}
+
+.nav {
+  display: flex;
+  background-color: firebrick;
+  color: white;
+  font-weight: bold;
+  padding-left: 9rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+
+}
+
+.nav span {
+
+}
+
+.products {
+  display: inline-flex;
+}
+
+.item {
+
+  height: 15rem;
+  width: 15rem;
+  border: 4px solid black;
+}
+
+.item img {
+  height: 9rem;
+  width: auto;
 }
